syntax = "proto3";

package processor.expensecategoryrelation.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "validate/validate.proto";

// An event with metadata containing information about a project that was created
message ExpenseCategoryRelationCreated {
  string expense_id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.expense.v1/Expense"},
    (validate.rules).string = {pattern: "^expense-[A-Za-z0-9]{15}$"}
  ];
  string category_id = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.category.v1/Category"},
    (validate.rules).string = {pattern: "^category-[A-Za-z0-9]{15}$"}
  ];
  string requestor_email = 6 [
    (google.api.field_behavior) = REQUIRED,
    (validate.rules).string.email = true
  ];
}

// An event with metadata containing information about a project that was deleted
message ExpenseCategoryRelationDeleted {
  string expense_id = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.expense.v1/Expense"},
    (validate.rules).string = {pattern: "^expense-[A-Za-z0-9]{15}$"}
  ];
  string category_id = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "common.category.v1/Category"},
    (validate.rules).string = {pattern: "^category-[A-Za-z0-9]{15}$"}
  ];
}